Changed title, added heading, and added paragraphs.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Ethan Doyle</title>
 </head>
 <body>
-  Hello World
+  <h1>Hello, my name is Ethan Doyle!</h1>
+  <p>Welcome to my webpage</p>
+  <p>Research Interests:</p>
+
 </body>
 </html>
