Formatted code for readability and added hobbies/interests.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
 <body>
   <h1>Hello, my name is Ethan Doyle!</h1>
   <img src=images/profile-picture.jpg width=500px height=500px />
-  <p>Welcome to my webpage. <br>
+  <p>
+    Welcome to my webpage. <br>
     I am a student in the
     <a href="https://www.geo.txstate.edu/"> Geography Department</a> at
     <a href="https://txstate.edu/">Texas State University</a>.</p>
-<p>Research Interests:</p>
+  </p>
+  <p>
+    <h3>Hobbies/Interests:</h3>
+    <ol>
+      <li>Music</li>
+      <li>Reading</li>
+      <li>Geography</li>
+      <li>Legal Studies</li>
+    </ol>
+  </p>
 </body>
 </html>
