--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Ethan Doyle</title>
+  <link rel="stylesheet" type="text/css" href="css/main_style.css">
 </head>
 <body>
   <h1>Hello, my name is Ethan Doyle!</h1>
