Divided HTML document and added comment about external CSS.

--- a/index.html
+++ b/index.html
@@ -2,25 +2,37 @@
 <html>
 <head>
   <title>Ethan Doyle</title>
+  <!-- All Styling for this HTML document is contained in this external css
+  file -->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
 </head>
 <body>
-  <h1>Hello, my name is Ethan Doyle!</h1>
-  <img src=images/profile-picture.jpg width=500px height=500px />
-  <p>
-    Welcome to my webpage. <br>
-    I am a student in the
-    <a href="https://www.geo.txstate.edu/"> Geography Department</a> at
-    <a href="https://txstate.edu/">Texas State University</a>.</p>
-  </p>
-  <p>
-    <h3>Hobbies/Interests:</h3>
-    <ol>
-      <li>Music</li>
-      <li>Reading</li>
-      <li>Geography</li>
-      <li>Legal Studies</li>
-    </ol>
-  </p>
+  <div id="body-container">
+    <div id="header">
+      <h1>Hello, my name is Ethan Doyle!</h1>
+    </div>
+    <div id="profile-picture">
+      <img src=images/profile-picture.jpg width=500px height=500px />
+    </div>
+    <div id="welcome-text">
+      <p>
+      Welcome to my webpage. <br>
+      I am a student in the
+      <a href="https://www.geo.txstate.edu/" target="_blank"> Geography Department</a> at
+      <a href="https://www.txst.edu/" target="_blank"> Texas State University</a>.
+      </p>
+    </div>
+    <div id="research-interests">
+      <p>
+        <h3>Research Interests:</h3>
+        <ol>
+          <li>Music</li>
+          <li>Reading</li>
+          <li>Geography</li>
+          <li>Legal Studies</li>
+        </ol>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
