--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- All Styling for this HTML document is contained in this external css
   file -->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
+  <script src="javascript/external.js"></script>
 </head>
 <body>
   <div id="body-container">
