Replaced the header with user prompt information.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <!-- All Styling for this HTML document is contained in this external css
   file -->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
-  <script src="javascript/external.js"></script>
 </head>
 <body>
   <div id="body-container">
     <div id="header">
-      <h1>Hello, my name is Ethan Doyle!</h1>
+      <h1><script src="javascript/external.js"></script></h1>
     </div>
     <div id="profile-picture">
       <img src=images/profile-picture.jpg width=500px height=500px />
