--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div id="welcome-text">
       <p>
-      Welcome to my webpage. <br>
+      My name is Ethan. <br>
       I am a student in the
-      <a href="https://www.geo.txstate.edu/" target="_blank"> Geography Department</a> at
+      <a href="https://www.geo.txstate.edu/" target="_blank"> Department of Geography and Environmental Studies</a> at
       <a href="https://www.txst.edu/" target="_blank"> Texas State University</a>.
       </p>
     </div>
@@ -33,6 +33,16 @@
         </ol>
       </p>
     </div>
+  </div>
+  <div id="copyright">
+    <script>
+      // Comment here.
+      var today = new Date();
+      // Comment here.
+      var year = today.getFullYear();
+      // Comment here.
+      document.writeln("Copyright &copy; " + year);
+    </script>
   </div>
 </body>
 </html>
