--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <p>
       My name is Ethan. <br>
       I am a student in the
-      <a href="https://www.geo.txstate.edu/" target="_blank"> Department of Geography and Environmental Studies</a> at
-      <a href="https://www.txst.edu/" target="_blank"> Texas State University</a>.
+      <a href="https://www.geo.txstate.edu/" target="_blank"> Department of 
+        Geography and Environmental Studies</a> at
+      <a href="https://www.txst.edu/" target="_blank"> 
+        Texas State University</a>.
       </p>
     </div>
     <div id="research-interests">
@@ -36,11 +38,15 @@
   </div>
   <div id="copyright">
     <script>
-      // Comment here.
+      // <script> is used to embed code, in this case javascript, 
+      // into the middle of your html doc.
       var today = new Date();
-      // Comment here.
+      // Creates a variable "today" that is equal to the date, 
+      // using the javascript Date() function.
       var year = today.getFullYear();
-      // Comment here.
+      // Creates a variable "year" that gets the full year from the 
+      // "today" variable by setting it equal to today.getFullYear() 
+      // using the javascript getFullYear() function.
       document.writeln("Copyright &copy; " + year);
     </script>
   </div>
