--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <div id="profile-picture">
       <img src=images/profile-picture.jpg width=250px height=250px />
+      <p>Hello!</p>
     </div>
     <div id="welcome-text">
       <p>
