--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <meta http-equiv="refresh" content="0; url=lab7_homework.html" />
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial- scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
